--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,13 @@
   "version": 2,
   "builds": [
     {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "frontend/dist"
+      }
+    },
+    {
       "src": "backend/src/server.js",
       "use": "@vercel/node"
     }
