--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nanoid": "^5.0.7",
-    "@supabase/supabase-js": "^2.39.0"
+    "@supabase/supabase-js": "^2.39.0",
+    "archiver": "^6.0.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
 
